[gd_scene load_steps=22 format=3 uid="uid://dtkw7x4hdoyt2"]

[ext_resource type="TileSet" uid="uid://t0wnjvlc72lf" path="res://assets/tileset/TrapmoorTileset_v03.tres" id="1_ag3fv"]
[ext_resource type="Script" uid="uid://cao01gpotabl2" path="res://scripts/game scenes/game.gd" id="1_kvpfn"]
[ext_resource type="PackedScene" uid="uid://ccrgslptfvujl" path="res://player/player.tscn" id="2_dspdp"]
[ext_resource type="PackedScene" uid="uid://bsdelvdiesf0o" path="res://inventory/scenes/inventory_item.tscn" id="3_b0nof"]
[ext_resource type="PackedScene" uid="uid://duelb2q8ha7hp" path="res://scenes/signs and menus/pause_screen.tscn" id="3_psmk7"]
[ext_resource type="Texture2D" uid="uid://baunnldtvgpp0" path="res://icon.svg" id="4_j6hfo"]
[ext_resource type="PackedScene" uid="uid://bhod10c0fj1bp" path="res://scenes/signs and menus/finish.tscn" id="6_twexu"]
[ext_resource type="PackedScene" uid="uid://befh57cg3tm24" path="res://enemies/scenes/enemy.tscn" id="7_lph38"]
[ext_resource type="PackedScene" uid="uid://b18lmeyce53di" path="res://scenes/game scenes/level1.tscn" id="7_rysoc"]
[ext_resource type="PackedScene" uid="uid://bv2b50rofjqc4" path="res://scenes/node resources/health_bar.tscn" id="8_khsen"]
[ext_resource type="PackedScene" uid="uid://dwocfaxnwkosl" path="res://scenes/traps/spike.tscn" id="9_k0taf"]
[ext_resource type="PackedScene" uid="uid://v37iwosey6gf" path="res://scenes/node resources/stamina_bar.tscn" id="10_rq0lr"]
[ext_resource type="Script" uid="uid://bbefa02tsh80b" path="res://scripts/node resources/money_label.gd" id="11_1kice"]
[ext_resource type="Texture2D" uid="uid://dbbf2r2e2vgla" path="res://assets/sprites/coin.png" id="11_xfxt6"]
[ext_resource type="FontFile" uid="uid://bi04iecmbt37l" path="res://assets/Fonts/ARCADECLASSIC.TTF" id="12_kvuet"]
[ext_resource type="PackedScene" uid="uid://bjkwlxilwfgil" path="res://inventory/scenes/inventory_ui.tscn" id="13_trtic"]
[ext_resource type="PackedScene" uid="uid://bhucwpx8dw1e6" path="res://cards/scenes/card_deck_open.tscn" id="14_ir15t"]
[ext_resource type="Theme" uid="uid://bvcwux0exg1y0" path="res://main_theme.tres" id="15_ca42v"]
[ext_resource type="PackedScene" uid="uid://b4cycf46t3wmq" path="res://cards/scenes/card_deck.tscn" id="16_ca42v"]
[ext_resource type="PackedScene" uid="uid://cvbf4h8xu6bjk" path="res://scenes/signs and menus/proceed_sign.tscn" id="21_37s47"]
[ext_resource type="PackedScene" uid="uid://ck134hita7gdt" path="res://scenes/signs and menus/proceed_sign_screen.tscn" id="22_bt5mj"]

[node name="Game" type="Node2D"]
position = Vector2(336, 192)
script = ExtResource("1_kvpfn")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_ag3fv")
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(-720911, 655360, 0, -655375, 655360, 0, -589839, 655360, 0, -524303, 720896, 0, -458767, 655360, 0, -393231, 655360, 0, -327695, 655360, 0, -262159, 655360, 1, -196623, 655360, 0, -131087, 655360, 0, -65551, 655360, 0, -15, 655360, 1, -720910, 655360, 0, -655374, 720896, 0, -589838, 720896, 1, -524302, 655360, 0, -458766, 655360, 0, -393230, 655360, 1, -327694, 655360, 0, -262158, 655360, 0, -196622, 655360, 0, -131086, 655360, 4, -65550, 655360, 0, -14, 655360, 0, 65522, 720896, 0, -720909, 655360, 0, -655373, 655360, 0, -589837, 655360, 0, -524301, 655360, 0, -458765, 655360, 0, -393229, 655360, 0, -327693, 655360, 0, -262157, 720896, 2, -196621, 655360, 4, -131085, 655360, 0, -65549, 720896, 3, -13, 655360, 0, 65523, 655360, 0, -720908, 655360, 0, -655372, 655360, 1, -589836, 655360, 0, -524300, 655360, 0, -458764, 655360, 0, -393228, 655360, 0, -327692, 655360, 1, -262156, 655360, 4, -196620, 524288, 1, -131084, 655360, 3, -65548, 655360, 4, -12, 720896, 2, 65524, 720896, 0, 131060, 655360, 0, -720907, 655360, 0, -655371, 655360, 0, -589835, 655360, 0, -524299, 655360, 0, -458763, 655360, 0, -393227, 655360, 4, -327691, 589824, 4, -262155, 524288, 1, -196619, 720896, 3, -131083, 524288, 1, -65547, 720896, 3, -11, 655360, 4, 65525, 655360, 0, 131061, 655360, 0, -720906, 655360, 0, -655370, 655360, 0, -589834, 655360, 0, -524298, 655360, 0, -458762, 655360, 0, -393226, 655360, 0, -327690, 720896, 3, -262154, 655360, 3, -196618, 655360, 3, -131082, 524288, 1, -65546, 655360, 3, -10, 655360, 0, 65526, 655360, 0, 131062, 720896, 0, -720905, 655360, 0, -655369, 655360, 0, -589833, 655360, 1, -524297, 655360, 0, -458761, 720896, 0, -393225, 655360, 4, -327689, 655360, 0, -262153, 524288, 1, -196617, 524288, 1, -131081, 589824, 4, -65545, 655360, 3, -9, 720896, 3, 65527, 655360, 1, 131063, 655360, 0, -720904, 655360, 0, -655368, 655360, 0, -589832, 655360, 0, -524296, 655360, 0, -458760, 655360, 0, -393224, 655360, 0, -327688, 720896, 2, -262152, 720896, 3, -196616, 655360, 3, -131080, 524288, 1, -65544, 524288, 1, -8, 655360, 4, 65528, 655360, 0, 131064, 655360, 0, -720903, 655360, 0, -655367, 655360, 0, -589831, 655360, 0, -524295, 655360, 0, -458759, 655360, 0, -393223, 655360, 0, -327687, 655360, 4, -262151, 589824, 4, -196615, 524288, 1, -131079, 655360, 3, -65543, 589824, 4, -7, 655360, 4, 65529, 655360, 0, 131065, 655360, 0, -720902, 720896, 0, -655366, 720896, 0, -589830, 655360, 0, -524294, 655360, 0, -458758, 655360, 1, -393222, 655360, 0, -327686, 655360, 0, -262150, 655360, 3, -196614, 524288, 1, -131078, 524288, 1, -65542, 655360, 3, -6, 720896, 2, 65530, 655360, 1, 131066, 655360, 0, -720901, 655360, 0, -655365, 655360, 0, -589829, 655360, 0, -524293, 655360, 0, -458757, 655360, 0, -393221, 655360, 0, -327685, 720896, 3, -262149, 524288, 1, -196613, 655360, 3, -131077, 524288, 1, -65541, 655360, 3, -5, 655360, 0, 65531, 655360, 0, 131067, 655360, 0, -720900, 655360, 0, -655364, 655360, 0, -589828, 655360, 0, -524292, 655360, 0, -458756, 655360, 0, -393220, 655360, 0, -327684, 655360, 0, -262148, 720896, 3, -196612, 524288, 1, -131076, 524288, 1, -65540, 524288, 1, -4, 720896, 3, 65532, 655360, 0, 131068, 655360, 0, -720899, 655360, 0, -655363, 655360, 0, -589827, 655360, 1, -524291, 655360, 0, -458755, 655360, 0, -393219, 655360, 0, -327683, 720896, 3, -262147, 524288, 1, -196611, 655360, 3, -131075, 524288, 1, -65539, 655360, 3, -3, 655360, 0, -720898, 655360, 0, -655362, 655360, 0, -589826, 655360, 0, -524290, 655360, 0, -458754, 720896, 0, -393218, 655360, 0, -327682, 720896, 2, -262146, 655360, 4, -196610, 524288, 1, -131074, 524288, 1, -65538, 720896, 3, -2, 720896, 3, -720897, 655360, 1, -655361, 655360, 0, -589825, 655360, 0, -524289, 655360, 0, -458753, 655360, 0, -393217, 655360, 4, -327681, 655360, 0, -262145, 589824, 4, -196609, 524288, 1, -131073, 524288, 1, -65537, 589824, 4, -1, 720896, 3, -786432, 655360, 0, -720896, 655360, 0, -655360, 655360, 0, -589824, 655360, 0, -524288, 655360, 0, -458752, 655360, 0, -393216, 655360, 0, -327680, 655360, 3, -262144, 524288, 1, -196608, 655360, 3, -131072, 524288, 1, -65536, 655360, 0, 0, 655360, 0, -786431, 655360, 0, -720895, 655360, 0, -655359, 655360, 0, -589823, 655360, 1, -524287, 655360, 0, -458751, 720896, 2, -393215, 720896, 3, -327679, 524288, 1, -262143, 655360, 3, -196607, 524288, 1, -131071, 524288, 1, -65535, 655360, 4, 1, 655360, 0, 65537, 655360, 0, -786430, 655360, 0, -720894, 655360, 0, -655358, 655360, 0, -589822, 655360, 0, -524286, 655360, 0, -458750, 720896, 3, -393214, 655360, 1, -327678, 524288, 1, -262142, 524288, 1, -196606, 655360, 3, -131070, 589824, 4, -65534, 655360, 0, 2, 655360, 1, 65538, 655360, 0, -786429, 655360, 0, -720893, 720896, 0, -655357, 655360, 0, -589821, 655360, 0, -524285, 655360, 0, -458749, 655360, 0, -393213, 655360, 0, -327677, 524288, 2, -262141, 524288, 1, -196605, 524288, 1, -131069, 524288, 1, -65533, 720896, 3, 3, 655360, 0, 65539, 655360, 0, -786428, 655360, 1, -720892, 655360, 0, -655356, 655360, 0, -589820, 655360, 0, -524284, 655360, 0, -458748, 720896, 2, -393212, 720896, 3, -327676, 524288, 2, -262140, 655360, 3, -196604, 524288, 1, -131068, 524288, 2, -65532, 655360, 4, 4, 655360, 0, 65540, 655360, 0, -786427, 655360, 0, -720891, 655360, 0, -655355, 655360, 0, -589819, 655360, 1, -524283, 655360, 0, -458747, 655360, 0, -393211, 655360, 4, -327675, 589824, 4, -262139, 524288, 1, -196603, 524288, 1, -131067, 655360, 4, -65531, 655360, 0, 5, 655360, 0, 65541, 655360, 1, -786426, 655360, 0, -720890, 655360, 0, -655354, 655360, 0, -589818, 655360, 0, -524282, 720896, 0, -458746, 655360, 0, -393210, 655360, 0, -327674, 524288, 1, -262138, 524288, 1, -196602, 524288, 1, -131066, 589824, 4, -65530, 720896, 0, 6, 655360, 0, 65542, 655360, 0, -786425, 655360, 0, -720889, 655360, 0, -655353, 655360, 0, -589817, 655360, 0, -524281, 655360, 0, -458745, 655360, 0, -393209, 720896, 3, -327673, 655360, 3, -262137, 524288, 1, -196601, 655360, 3, -131065, 524288, 1, -65529, 655360, 0, 7, 655360, 0, 65543, 655360, 0, -786424, 720896, 0, -720888, 655360, 0, -655352, 655360, 0, -589816, 655360, 0, -524280, 655360, 0, -458744, 655360, 4, -393208, 655360, 0, -327672, 524288, 1, -262136, 589824, 4, -196600, 524288, 1, -131064, 655360, 3, -65528, 655360, 4, 8, 720896, 2, 65544, 655360, 0, -786423, 655360, 0, -720887, 655360, 0, -655351, 720896, 0, -589815, 655360, 0, -524279, 655360, 0, -458743, 655360, 4, -393207, 720896, 3, -327671, 524288, 1, -262135, 655360, 3, -196599, 655360, 3, -131063, 524288, 1, -65527, 655360, 0, 9, 655360, 0, 65545, 655360, 0, -786422, 655360, 0, -720886, 655360, 0, -655350, 655360, 0, -589814, 655360, 0, -524278, 655360, 0, -458742, 655360, 0, -393206, 720896, 3, -327670, 655360, 3, -262134, 524288, 1, -196598, 524288, 1, -131062, 720896, 3, -65526, 655360, 0, 10, 655360, 0, 65546, 720896, 0, -786421, 655360, 1, -720885, 655360, 0, -655349, 655360, 0, -589813, 655360, 0, -524277, 720896, 0, -458741, 655360, 0, -393205, 655360, 0, -327669, 589824, 4, -262133, 720896, 3, -196597, 655360, 3, -131061, 655360, 4, -65525, 655360, 4, 11, 655360, 0, 65547, 655360, 0, -786420, 655360, 0, -720884, 655360, 0, -655348, 655360, 0, -589812, 655360, 0, -524276, 655360, 0, -458740, 655360, 0, -393204, 655360, 1, -327668, 655360, 4, -262132, 524288, 1, -196596, 720896, 3, -131060, 720896, 2, -65524, 655360, 0, 12, 655360, 0, 65548, 655360, 0, -786419, 655360, 0, -720883, 655360, 0, -655347, 655360, 0, -589811, 655360, 1, -524275, 655360, 0, -458739, 655360, 0, -393203, 655360, 4, -327667, 720896, 2, -262131, 655360, 4, -196595, 655360, 0, -131059, 655360, 4, -65523, 655360, 0, 13, 655360, 1, 65549, 655360, 0, -786418, 655360, 0, -720882, 720896, 0, -655346, 655360, 0, -589810, 655360, 0, -524274, 655360, 0, -458738, 655360, 0, -393202, 655360, 0, -327666, 655360, 0, -262130, 720896, 2, -196594, 655360, 0, -131058, 655360, 0, -65522, 655360, 0, 14, 655360, 0, -786417, 655360, 0, -720881, 655360, 0, -655345, 655360, 0, -589809, 720896, 0, -524273, 655360, 0, -458737, 720896, 0, -393201, 655360, 0, -327665, 655360, 1, -262129, 655360, 0, -196593, 720896, 3, -131057, 720896, 0, -65521, 655360, 0, 131059, 655360, 0, -720917, 655360, 0, -655381, 655360, 0, -589845, 655360, 0, -524309, 655360, 0, -458773, 655360, 0, -720916, 655360, 0, -655380, 655360, 0, -589844, 720896, 0, -524308, 655360, 0, -458772, 655360, 0, -720915, 655360, 0, -655379, 655360, 0, -589843, 655360, 0, -524307, 720896, 1, -458771, 655360, 0, -720914, 655360, 0, -655378, 720896, 0, -589842, 655360, 0, -524306, 655360, 1, -458770, 655360, 0, -720913, 655360, 0, -655377, 655360, 0, -589841, 655360, 0, -524305, 655360, 0, -458769, 655360, 0, -720912, 655360, 0, -655376, 655360, 0, -589840, 655360, 0, -524304, 655360, 0, -458768, 655360, 0, -786416, 655360, 0, -720880, 655360, 0, -655344, 655360, 0, -589808, 655360, 0, -524272, 655360, 0, -786415, 655360, 0, -720879, 720896, 0, -655343, 655360, 0, -589807, 655360, 0, -524271, 655360, 0, -786414, 655360, 0, -720878, 655360, 0, -655342, 655360, 0, -589806, 655360, 1, -524270, 655360, 0, -786413, 655360, 0, -720877, 655360, 1, -655341, 655360, 0, -589805, 655360, 0, -524269, 655360, 0, -786412, 655360, 0, -720876, 655360, 0, -655340, 655360, 0, -589804, 720896, 0, -524268, 655360, 0, -786411, 655360, 0, -720875, 655360, 0, -655339, 655360, 0, -589803, 655360, 0, -524267, 655360, 0, 65533, 655360, 0, 131069, 655360, 0, 131070, 655360, 0, 131071, 655360, 0, 65535, 655360, 0, 65534, 720896, 0, 65536, 655360, 0)
layer_1/name = "Mid"
layer_1/tile_data = PackedInt32Array(262136, 196608, 1, 262137, 262144, 2, 262138, 262144, 2, 262139, 327680, 1, 262140, 262144, 2, 262141, 262144, 2, 262142, 262144, 2, 262143, 131072, 1, 196608, 262144, 2, 196609, 196608, 1, 196610, 262144, 2, 196611, 327680, 1, 196612, 262144, 2, 196613, 262144, 2, 196614, 262144, 2, 196615, 131072, 1, 196616, 262144, 2, 196617, 327680, 1, 262135, 262144, 2, 196603, 196608, 0, 196606, 196608, 0, 131073, 196608, 0, 131077, 196608, 0, 131080, 196608, 0, 196600, 196608, 0, 196596, 196608, 0, 196595, 196608, 0, 131084, 196608, 0, 131085, 196608, 0, 196594, 327680, 1, 131057, 262144, 2, 131086, 262144, 2, 65551, 262144, 2, 16, 262144, 2, -65520, 327680, 1, -131056, 262144, 2, -196592, 262144, 2, -262128, 262144, 2, -327664, 262144, 2, 65520, 262144, 2, -16, 327680, 1, -65552, 262144, 2, -131088, 196608, 1, -196624, 262144, 2, -262160, 262144, 2, -327696, 327680, 1, -393232, 262144, 2, -458736, 262144, 2, -393200, 196608, 1, 196618, 262144, 2, 196619, 196608, 1, 262132, 131072, 1, 262134, 262144, 2, -393237, 458752, 1, -327701, 589824, 2, -262165, 393216, 1, -196629, 458752, 1, -131093, 524288, 2, -65557, 524288, 2, -21, 393216, 2, 65515, 524288, 2, -393236, 524288, 2, -327700, 589824, 1, -262164, 524288, 2, -196628, 393216, 2, -131092, 524288, 2, -65556, 393216, 1, -20, 524288, 2, 65516, 458752, 1, -393235, 393216, 1, -327699, 393216, 2, -262163, 524288, 2, -196627, 458752, 1, -131091, 589824, 1, -65555, 589824, 2, -19, 589824, 1, 65517, 524288, 2, -393234, 196608, 1, -327698, 262144, 2, -262162, 131072, 1, -196626, 262144, 2, -131090, 327680, 1, -65554, 262144, 2, -18, 196608, 1, 65518, 131072, 1, -393233, 262144, 2, -327697, 262144, 2, -262161, 196608, 1, -196625, 262144, 2, -131089, 262144, 2, -65553, 262144, 2, -17, 262144, 2, 65519, 262144, 2, -458735, 327680, 1, -393199, 262144, 2, -327663, 262144, 2, -262127, 327680, 1, -196591, 131072, 1, -131055, 262144, 2, -65519, 262144, 2, 17, 196608, 1, -458734, 262144, 2, -393198, 327680, 1, -327662, 262144, 2, -262126, 262144, 2, -196590, 196608, 1, -131054, 262144, 2, -65518, 327680, 1, 18, 262144, 2, -458733, 393216, 1, -393197, 524288, 2, -327661, 589824, 2, -262125, 589824, 1, -196589, 393216, 1, -131053, 524288, 2, -65517, 393216, 2, 19, 458752, 1, -458732, 524288, 2, -393196, 458752, 1, -327660, 524288, 2, -262124, 393216, 2, -196588, 524288, 2, -131052, 589824, 2, -65516, 524288, 2, 20, 524288, 2, -458731, 458752, 1, -393195, 524288, 2, -327659, 393216, 1, -262123, 524288, 2, -196587, 524288, 2, -131051, 458752, 1, -65515, 524288, 2, 21, 393216, 1, 327659, 524288, 2, 393195, 524288, 2, 458731, 393216, 1, 524267, 458752, 1, 327660, 524288, 2, 393196, 458752, 1, 458732, 393216, 2, 524268, 524288, 2, 589804, 524288, 2, 327661, 458752, 1, 393197, 589824, 2, 458733, 524288, 2, 524269, 524288, 2, 589805, 393216, 1, 327662, 524288, 2, 393198, 524288, 2, 458734, 393216, 1, 524270, 589824, 2, 589806, 589824, 1, 327663, 262144, 2, 393199, 589824, 1, 458735, 524288, 2, 524271, 458752, 1, 589807, 524288, 2, 327664, 131072, 1, 393200, 262144, 2, 458736, 393216, 2, 524272, 524288, 2, 589808, 524288, 2, 327665, 262144, 2, 393201, 327680, 1, 458737, 458752, 1, 524273, 524288, 2, 589809, 393216, 1, 327666, 196608, 1, 393202, 262144, 2, 458738, 524288, 2, 524274, 589824, 2, 589810, 524288, 2, 327667, 262144, 2, 393203, 262144, 2, 458739, 458752, 1, 524275, 524288, 2, 589811, 524288, 2, 327668, 196608, 1, 393204, 262144, 2, 458740, 393216, 2, 524276, 524288, 2, 589812, 458752, 1, 327669, 262144, 2, 393205, 327680, 1, 458741, 524288, 2, 524277, 393216, 1, 589813, 589824, 1, 327670, 262144, 2, 393206, 262144, 2, 458742, 524288, 2, 524278, 524288, 2, 589814, 524288, 2, 327671, 327680, 1, 393207, 262144, 2, 458743, 458752, 1, 524279, 589824, 2, 589815, 524288, 2, 327672, 262144, 2, 393208, 131072, 1, 458744, 524288, 2, 524280, 393216, 1, 589816, 458752, 1, 327673, 262144, 2, 393209, 262144, 2, 458745, 589824, 2, 524281, 524288, 2, 589817, 524288, 2, 327674, 262144, 2, 393210, 327680, 1, 458746, 524288, 2, 524282, 393216, 1, 589818, 524288, 2, 327675, 262144, 2, 393211, 262144, 2, 458747, 524288, 2, 524283, 524288, 2, 589819, 458752, 1, 327676, 262144, 2, 393212, 131072, 1, 458748, 458752, 1, 524284, 589824, 2, 589820, 524288, 2, 327677, 196608, 1, 393213, 262144, 2, 458749, 524288, 2, 524285, 524288, 2, 589821, 393216, 1, 327678, 262144, 2, 393214, 262144, 2, 458750, 393216, 1, 524286, 458752, 1, 589822, 524288, 2, 327679, 262144, 2, 393215, 327680, 1, 458751, 524288, 2, 524287, 524288, 2, 589823, 524288, 2, 262144, 262144, 2, 327680, 262144, 2, 393216, 524288, 2, 458752, 393216, 1, 524288, 393216, 2, 262145, 262144, 2, 327681, 262144, 2, 393217, 524288, 2, 458753, 524288, 2, 524289, 393216, 1, 262146, 262144, 2, 327682, 131072, 1, 393218, 458752, 1, 458754, 589824, 2, 524290, 524288, 2, 262147, 262144, 2, 327683, 262144, 2, 393219, 524288, 2, 458755, 524288, 2, 524291, 524288, 2, 262148, 262144, 2, 327684, 196608, 1, 393220, 524288, 2, 458756, 393216, 1, 524292, 589824, 1, 262149, 262144, 2, 327685, 262144, 2, 393221, 393216, 2, 458757, 524288, 2, 524293, 524288, 2, 262150, 196608, 1, 327686, 262144, 2, 393222, 458752, 1, 458758, 524288, 2, 524294, 458752, 1, 262151, 262144, 2, 327687, 262144, 2, 393223, 524288, 2, 458759, 589824, 2, 524295, 524288, 2, 262152, 262144, 2, 327688, 327680, 1, 393224, 524288, 2, 458760, 524288, 2, 524296, 393216, 2, 262153, 262144, 2, 327689, 262144, 2, 458761, 393216, 1, 524297, 458752, 1, 262154, 262144, 2, 327690, 131072, 1, 393226, 524288, 2, 458762, 524288, 2, 524298, 524288, 2, 262155, 262144, 2, 327691, 262144, 2, 393227, 393216, 2, 458763, 458752, 1, 524299, 524288, 2, 262156, 262144, 2, 327692, 327680, 1, 393228, 458752, 1, 458764, 524288, 2, 524300, 393216, 2, 262157, 262144, 2, 327693, 262144, 2, 393229, 524288, 2, 458765, 524288, 2, 524301, 393216, 1, 262158, 196608, 1, 327694, 131072, 1, 393230, 458752, 1, 458766, 524288, 2, 524302, 589824, 1, 262159, 262144, 2, 327695, 262144, 2, 393231, 393216, 2, 458767, 524288, 2, 524303, 524288, 2, 262160, 327680, 1, 327696, 262144, 2, 393232, 458752, 1, 458768, 524288, 2, 524304, 458752, 1, 262161, 262144, 2, 327697, 589824, 1, 393233, 524288, 2, 458769, 393216, 2, 524305, 524288, 2, 262162, 524288, 2, 327698, 393216, 2, 393234, 524288, 2, 458770, 393216, 1, 524306, 524288, 2, 262163, 393216, 1, 327699, 524288, 2, 393235, 393216, 2, 458771, 524288, 2, 524307, 524288, 2, 262164, 524288, 2, 327700, 524288, 2, 393236, 458752, 1, 458772, 524288, 2, 524308, 589824, 1, 262165, 458752, 1, 327701, 393216, 2, 393237, 524288, 2, 458773, 393216, 1, 524309, 524288, 2, 131051, 458752, 1, 196587, 524288, 2, 262123, 589824, 2, 131052, 589824, 2, 196588, 393216, 1, 262124, 524288, 2, 131053, 524288, 2, 196589, 524288, 2, 262125, 393216, 2, 131054, 262144, 2, 196590, 262144, 2, 262126, 262144, 2, 131055, 327680, 1, 196591, 262144, 2, 262127, 327680, 1, 131056, 262144, 2, 196592, 196608, 1, 262128, 262144, 2, 196593, 262144, 2, 262129, 262144, 2, 65552, 262144, 2, 131088, 131072, 1, 196624, 262144, 2, 65553, 131072, 1, 131089, 262144, 2, 196625, 262144, 2, 65554, 262144, 2, 131090, 196608, 1, 196626, 262144, 2, 65555, 524288, 2, 131091, 524288, 2, 196627, 393216, 2, 65556, 589824, 1, 131092, 589824, 2, 196628, 524288, 2, 65557, 524288, 2, 131093, 458752, 1, 196629, 524288, 2, 196620, 262144, 2, 196621, 327680, 1, 196622, 262144, 2, 196623, 262144, 2, 131087, 196608, 1, 262130, 262144, 2, 262131, 262144, 2, 262133, 262144, 2, 131072, 262144, 0, 196604, 262144, 0, 196598, 262144, 0, 131058, 262144, 0, 131078, 262144, 0, 131082, 262144, 0, 65550, 262144, 0, 15, 327680, 0, 65521, 131072, 0, 196605, 131072, 0, 196597, 131072, 0, 131083, 327680, 0, 196602, 327680, 0, 196599, 327680, 0, 131079, 327680, 0, 131074, 327680, 0, 131076, 131072, 0, 196601, 131072, 0, 131081, 131072, 0, 131075, 131072, 0, 589803, 524288, 2, 393225, 524288, 2, -131079, 327680, 5, -196601, 327680, 5, 196607, 196608, 0)

[node name="Finish" parent="." instance=ExtResource("6_twexu")]
position = Vector2(279, -144)
target_level = ExtResource("7_rysoc")

[node name="Player" parent="." instance=ExtResource("2_dspdp")]
unique_name_in_owner = true
position = Vector2(-86, -89)

[node name="HealthBar" parent="Player" instance=ExtResource("8_khsen")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -217.0
offset_top = -111.0
offset_right = -122.0
offset_bottom = -98.0
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="StaminaBar" parent="Player" instance=ExtResource("10_rq0lr")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -217.0
offset_top = -96.0
offset_right = -122.0
offset_bottom = -83.0
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="DeckButton" parent="Player" node_paths=PackedStringArray("counter") instance=ExtResource("14_ir15t")]
unique_name_in_owner = true
offset_left = 181.0
offset_top = -129.0
offset_right = 231.0
offset_bottom = -29.0
scale = Vector2(0.7, 0.7)
theme = ExtResource("15_ca42v")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="Player/DeckButton"]
layout_mode = 0
offset_left = -14.2857
offset_top = 55.7143
offset_right = 25.7143
offset_bottom = 88.7143
theme_override_font_sizes/font_size = 32
text = "99"
metadata/_edit_use_anchors_ = true

[node name="Money" type="Label" parent="Player"]
offset_left = 186.0
offset_top = -62.0
offset_right = 226.0
offset_bottom = -45.0
theme = ExtResource("15_ca42v")
text = "123"
script = ExtResource("11_1kice")

[node name="Coin" type="Sprite2D" parent="Player"]
position = Vector2(174, -55)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_xfxt6")

[node name="Inventory_Item" parent="." instance=ExtResource("3_b0nof")]
position = Vector2(-146, 11)
item_type = "test type"
item_name = "test name"
item_texture = ExtResource("4_j6hfo")
item_effect = "test effect"

[node name="Inventory_Item2" parent="." instance=ExtResource("3_b0nof")]
position = Vector2(-207, -16)
item_type = "test1"
item_name = "a"
item_texture = ExtResource("4_j6hfo")
item_effect = "test3"

[node name="TestEnemy" parent="." instance=ExtResource("7_lph38")]
position = Vector2(84, -4)
scale = Vector2(2, 2)

[node name="SpikeEnemy" parent="." instance=ExtResource("9_k0taf")]
position = Vector2(-15, 31)

[node name="proceed_sign" parent="." instance=ExtResource("21_37s47")]
position = Vector2(199, 20)

[node name="Inventory_UI" type="CanvasLayer" parent="." groups=["UnpausableUserInterfaces"]]
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="Inventory_UI"]
anchors_preset = -1
anchor_left = 0.0659722
anchor_top = 0.114198
anchor_right = 0.934028
anchor_bottom = 0.885802
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.203922, 0.337255, 1)

[node name="Label" type="Label" parent="Inventory_UI/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.5
offset_top = 40.0
offset_right = 148.5
offset_bottom = 101.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("12_kvuet")
theme_override_font_sizes/font_size = 60
text = "Inventory"

[node name="Inventory_UI" parent="Inventory_UI/ColorRect" instance=ExtResource("13_trtic")]
layout_mode = 1

[node name="CardDeckView" type="CanvasLayer" parent="."]

[node name="DeckView" parent="CardDeckView" instance=ExtResource("16_ca42v")]
visible = false

[node name="proceed_sign_view" type="CanvasLayer" parent="."]

[node name="proceed_sign_screen" parent="proceed_sign_view" instance=ExtResource("22_bt5mj")]
visible = false

[node name="PauseScreenView" type="CanvasLayer" parent="."]
layer = 2

[node name="PauseScreen" parent="PauseScreenView" instance=ExtResource("3_psmk7")]
visible = false
clip_children = 1
z_index = 20
y_sort_enabled = true

[connection signal="body_entered" from="Finish" to="Player" method="_on_finish_body_entered"]
